기능 구현 - 한꺼번에 하느라 메세지 x